Image placeholders added, plus a few touch ups.

--- a/sections/character_creation/attributes.tex
+++ b/sections/character_creation/attributes.tex
@@ -1,6 +1,4 @@
-Characters statistics in Cogent Roleplay can be broken down into two categories which determine the bonuses (or penalties) you receive when rolling against Challenge Levels (\textbf{CL}) encountered in the game, whether \textbf{Actions} and \textbf{Conflicts}. These categories are:
-
-\section{Attributes and Skills} \label{sec:attributes_and_skills}
+Characters statistics in Cogent Roleplay can be broken down into two categories which determine the bonuses (or penalties) you receive when rolling against Challenge Levels (\textbf{CL}) encountered in the game, whether \textbf{Actions} and \textbf{Conflicts}. These two categories are \textbf{attributes} and \textbf{skills}.
 
 By default, in \textbf{Fast Play} games (see \textbf{How to Play}) player characters will be given \textbf{2 Attributes Points} and \textbf{12 Skill Points} they may assign to their character during character creation.
 
@@ -18,18 +16,17 @@ Attributes represent the physical abilities of your character.  There are three:
 
 On the Character Sheet they look like this:
 
-%![alttext](images/image1.png "image_tooltip")
-
-%\begin{figure}[t]
-    %\includegraphics[width=8cm]{Plot}
-    %\centering
-%\end{figure}
+\begin{figure}[H]
+    \includegraphics[width=8cm]{images/placeholder}
+    \centering
+    %\caption{This is a caption.}
+\end{figure}
 
 When assigning a point to an attribute or skill, simply mark a box with your pencil as shown above.
 
 The tapered “negative” box present represents the capacity for a character to have negatives in attributes. Players may not choose to have a negative in an attribute – it is only there in case a disabling characteristic or injury demands a negative be applied to an attribute.
 
-These three attributes cover all of the actions your player might attempt. Upon first glance it can seem like many physical abilities or qualities a person can possess are missed (most other role-play systems have a lot more), such as stamina, constitution, speed, knowledge, charisma etc. but in Cogent, these things are incorporated into the three Attributes above. Things like constitution and stamina are covered in strength, speed in reflex, and knowledge and charisma in intelligence. There’s no need to over-complicate it!
+These three attributes cover all the actions your player might attempt. Upon first glance it can seem like many physical abilities or qualities a person can possess are missed (most other roleplay systems have a lot more), such as stamina, constitution, speed, knowledge, charisma etc. but in Cogent, these things are incorporated into the three Attributes above. Things like constitution and stamina are covered in strength, speed in reflex, and knowledge and charisma in intelligence. There’s no need to over-complicate it!
 
 Each of these attributes applies to certain skill checks and to all combat rolls. From a combat perspective, one point in Intelligence and one point in Reflex have the same dice bonus as two points in strength. This is because a fast or clever opponent may very well be just as challenging as a strong one.
 
