--- a/sections/character_creation/core_skills.tex
+++ b/sections/character_creation/core_skills.tex
@@ -2,9 +2,13 @@ Where attributes showcase the raw physical and mental capabilities of a characte
 
 In \textbf{Fast Play} games, player characters will be given \textbf{12 skill points} they may assign to their character during character creation. Players may gain additional points to spend in this phase by either accepting a Disabling Characteristic (See: “Disabling Characteristics”) or by assigning attribute points to Intelligence (+3 skill points per point in Intelligence.) In \textbf{Campaign Play}, players will also be able to gain skill points as the story progresses. Each point represents an additional die the character receives when making dice checks using the applicable skill.
 
-%image tooltip
+\begin{figure}[H]
+    \includegraphics[width=8cm]{images/placeholder}
+    \centering
+    \caption{Image Placeholder.}
+\end{figure}
 
-Just like with Attributes, when assigning a point simply mark the box with your pencil as shown above. The tapered box on the far left is there to “cross out” if you take a negative in a skill. These skills can have a max of four points spent on each of them, and a player may also take a single ‘negative’ point from one of these skills, and apply the removed point elsewhere. (Note: This may only be done once, you cannot choose multiple negative skills at character creation)
+Just like with Attributes, when assigning a point simply mark the box with your pencil as shown above. The tapered box on the far left is there to “cross out” if you take a negative in a skill. These skills can have a max of four points spent on each of them, and a player may also take a single ‘negative’ point from one of these skills, and apply the removed point elsewhere. (Note: This may only be done once, you cannot choose multiple negative skills at character creation).
 
 Although this tapered “negative” box is also present in the Attributes section, players may not choose to have a negative in an attribute – it is only there in case a disabling characteristic demands a negative be applied to an attribute.
 
@@ -12,7 +16,11 @@ Every \textbf{skill} has an attribute (or attributes) it is based on. For exampl
 
 For Example, your character has \textbf{1 point} in \textbf{Strength} and \textbf{3 points} in \textbf{Athletics} When they perform an athletics check they will begin with their base of\textbf{3D6} add \textbf{1D6} for their \textbf{STR} Attribute, and \textbf{3D6} for their Athletics skill. The result is \textbf{7D6} to roll with:
 
-%image 3
+\begin{figure}[H]
+    \includegraphics[width=8cm]{images/placeholder}
+    \centering
+    \caption{Image Placeholder.}
+\end{figure}
 
 Skills checks may be attempted even if your character has no points spent on that specific skill. To do this, simply form your dice pool as normal, adding your base 3 dice to the number of shaded boxes in the relevant skill (+0 in the case of unskilled) and then adding a die for your skills core attribute.
 
