--- a/sections/character_creation/identity.tex
+++ b/sections/character_creation/identity.tex
@@ -15,7 +15,7 @@ that doesn't mesh well with the other characters can actually add a lot of fun a
 
 \section{Creating a Character} \label{sec:creating_a_character}
 
-When making a character, try to match the seriousness and realism of them to the setting and genre you’re playing in. Make them real, give them goals and history. Indeed on the Cogent Roleplay Character Sheet, there are several Core Characteristic requirements to be filled out:
+When making a character, try to match the seriousness and realism of them to the setting and genre you’re playing in. Make them real, give them goals and history. %[This does not exist on the v1.0.0 character sheet. Is there a new character sheet?] Indeed on the Cogent Roleplay Character Sheet, there are several Core Characteristic requirements to be filled out:
 
 %image
 
