Changed subsection labels to use "subsec:" not "sec:"

--- a/sections/character_creation/core_skills.tex
+++ b/sections/character_creation/core_skills.tex
@@ -39,7 +39,7 @@ It is in this way that Core Skills primarily differ from Vocational Skills, as V
 
 Combat will be introduced fully in Chapter 4, but it is worth noting that Core Skills cannot be added to combat rolls. The only way Core Skills can aid combat rolls is through assists (see \textbf{Assists}, CH3, PT2.) Your combat skills will be covered in \textbf{Vocations}, CH3, PT4. %these need to be changed to actual references once these pages are written!
 
-\subsection{Strength-Based Skills} \label{sec:strength_based_skills}
+\subsection{Strength-Based Skills} \label{subsec:strength_based_skills}
 
 \textbf{Endurance}
 
@@ -106,7 +106,7 @@ Throw covers the physical task of launching objects from yourself, and successfu
     \end{itemize}
 \end{displayquote}
 
-\subsection{Reflex-Based Skills}
+\subsection{Reflex-Based Skills} \label{subsec:reflex-based_skills}
 
 \textbf{Perception}
 
@@ -173,7 +173,7 @@ Sneaking, hiding from others and moving with no noise forms the basis of the Ste
     \end{itemize}
 \end{displayquote}
 
-\subsection{Intelligence-Based Skills}
+\subsection{Intelligence-Based Skills} \label{subsec:intelligence-based_skills}
 
 \textbf{General Knowledge}
 
