--- a/sections/character_creation/identity.tex
+++ b/sections/character_creation/identity.tex
@@ -19,19 +19,19 @@ When making a character, try to match the seriousness and realism of them to the
 
 %image
 
-\subsection{Character Disposition} \label{sec:character_disposition}
+\subsection{Character Disposition} \label{subsec:character_disposition}
 
 Are they happy, sad, moody, funny, cautious, untrusting, stupid, smart, tactical, shy, or boisterous? The list can go on and on. This doesn’t mean that they can’t be in any other mood, just that generally a person’s standard disposition is quite consistent throughout their lives. It is often wise to base these dispositions on a character’s history and beliefs/morality, to build a character with depth and motive.
 
-\subsection{Character History} \label{sec:character_history}
+\subsection{Character History} \label{subsec:character_history}
 
 A good history can help shape who your character is in great ways. You don’t have to write a novel but generally the more detailed the better – of course, there isn’t a lot of room on the character sheet for detailed character history, but you may choose to write one elsewhere. A good history can make your character feel much more real which will then, in turn, help your role-play be more convincing, rewarding and fun.
 
-\subsection{Beliefs / Morality} \label{sec:beliefs_morality}
+\subsection{Beliefs / Morality} \label{subsec:beliefs_morality}
 
 It’s hard to find a person without a specific worldview, with defined things that they see as good or evil. So a realistic character should also have these things. Even having no morals or beliefs is a morality and a belief. No matter what you chose for your character you should always answer why your characters believe the things they do and \textbf{why} they see things as evil and things as good. This will define your character, even more.
 
-\subsection{Goals / Aspirations} \label{sec:goals_aspirations}
+\subsection{Goals / Aspirations} \label{subsec:goals_aspirations}
 
 Everybody has goals or aspirations. They’re one-way people give purpose to their lives, so what purpose does your character see for themselves? This specific characteristic will very much guide what your character will do in-game. It’s recommended that you choose several long-term and short-term goals and aspirations.
 
