--- a/sections/introduction/roleplay.tex
+++ b/sections/introduction/roleplay.tex
@@ -1,4 +1,4 @@
-\section{What is Roleplaying} \label{sec:whatisroleplaying}
+\section{What is Roleplaying} \label{sec:what_is_roleplaying}
 
 As the term implies, roleplaying means to take on the role of someone else, specifically, a character you will play the role of in your game. \textbf{Roleplaying} is by far the most important aspect of the \textbf{Cogent Roleplay }system. Everything in this game is made to promote better, more immersive and satisfying Role-play. That being said, the ultimate thing that’ll enable you to experience this is your own imagination and creativity.
 
@@ -14,7 +14,7 @@ The core structure of any Tabletop Role-Playing game is made of two components:
 \item A \textbf{Narrator} (traditionally referred to as a Game Master or Dungeon Master), who acts as a referee and drives the game and story forward by controlling the world that the players are interacting with.
 \end{itemize}
 
-\section{How is Roleplaying Done?} \label{sec:howisroleplayingdone}
+\section{How is Roleplaying Done?} \label{sec:how_is_role_playing_done}
 
 Players take on the role of their character, meaning that regardless of their own ambitions or desires as a player, they should act how that character would act. Ideally, players at the table are trying to create a fun immersive experience, and how you approach character interaction will drastically affect that.
 
