Added disabling characteristics chapter and linked it and vocations in main.tex.

--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,14 @@
 \chapter{Core Skills} \label{ch:cc_core_skills}
 \input{sections/character_creation/core_skills.tex}
 
+\newpage
+\chapter{Vocations} \label{ch:cc_vocations}
+\input{sections/character_creation/vocations.tex}
+
+\newpage
+\chapter{Disabling Characteristics} \label{ch:cc_disabling_characteristics}
+\input{sections/character_creation/disabling_characteristics.tex}
+
 % =======================================================================================
 %                                   APPENDICES
 % =======================================================================================
