Added new chapters to main.tex as well as usepackage for tables. Corrected chapter labels in how-to.

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,8 @@
 \usepackage{lipsum}
 \usepackage{csquotes}
 \usepackage{float}
+\usepackage{tabularx}
+\usepackage{xltabular}
 
 \begin{document}
 
@@ -44,6 +46,14 @@
 \newpage
 \chapter{Disabling Characteristics} \label{ch:cc_disabling_characteristics}
 \input{sections/character_creation/disabling_characteristics.tex}
+
+\newpage
+\chapter{Destiny Points} \label{ch:cc_destiny_points}
+\input{sections/character_creation/destiny_points.tex}
+
+\newpage
+\chapter{Commerce Points} \label{ch:cc_commerce_points}
+\input{sections/character_creation/commerce_points.tex}
 
 % =======================================================================================
 %                                   APPENDICES
