Added missing packages section to how-to. Added labels to parts in main.tex.

--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 \newpage
 \tableofcontents
 
-\part{Introduction}
+\part{Introduction} \label{part:introduction}
 
 \newpage
 \chapter{Welcome to Cogent Roleplay} \label{ch:in_welcome}
@@ -25,7 +25,7 @@
 \chapter{A quick overview of Cogent}\label{ch:in_overview}
 \input{sections/introduction/overview}
 
-\part{Character Creation}
+\part{Character Creation} \label{part:character_creation}
 
 \newpage
 \chapter{Identity} \label{ch:cc_identity}
