Converted challenge levels and dice pools chapters to latex (and added How to Play part).

--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,16 @@
 \chapter{Commerce Points} \label{ch:cc_commerce_points}
 \input{sections/character_creation/commerce_points.tex}
 
+\part{How to Play} \label{part:how_to_play}
+
+\newpage
+\chapter{Dice Pools} \label{ch:hp_dice_pools}
+\input{sections/how_to_play/dice_pools.tex}
+
+\newpage
+\chapter{Actions and Challenge Levels} \label{ch:hp_challenge_levels}
+\input{sections/how_to_play/challenge_levels.tex}
+
 % =======================================================================================
 %                                   APPENDICES
 % =======================================================================================
