Spelling and grammar corrections for part 1

--- a/sections/introduction/overview.tex
+++ b/sections/introduction/overview.tex
@@ -1,17 +1,17 @@
-In the following chapters you will find all the rules for creating your own characters in Cogent Roleplay and everything you need to get started playing a game. The rulebook will first introduce you to Character Creation, Skills and Attributes, and then go through the game rules in detail.
+In the following chapters you will find all the rules for creating your own characters in Cogent Roleplay, and everything you need to get started playing a game. The rulebook will first introduce you to Character Creation, Skills and Attributes, and then go through the game rules in detail.
 
 While most people who have a passing knowledge of video games or tabletop roleplaying will have an innate understanding of many of the concepts presented here, we do not assume everyone has such knowledge from the get-go.
 
-When playing a tabletop RPG, you create a character and tailor their abilities and skills by spending a pool of points you start the game with. This allows you to create anyone you would like, from a super-smart detective to a brawling boxer.
+When playing a tabletop RPG, you create a character and tailor their abilities and skills by spending a pool of points that you start the game with. This allows you to create any character you would like, from a super-smart detective to a brawling boxer.
 
-The in-depth game rules will be explained in Chapter 2, but before you read about creating your character it is worth mentioning the two core mechanics used in Cogent Roleplay.
+The in-depth game rules will be explained in Part \ref{part:character_creation}, but before you read about creating your character it is worth mentioning the two core mechanics used in Cogent Roleplay.
 
 \section{Dice Pools and Challenge Levels} \label{sec:dice_pools_and_challenge_levels}
 
-In games of Cogent, player characters must overcome challenges during gameplay. When asked to, they will create \textbf{Dice Pools} by combining the total number of points between their skill and attribute, adding three, and collecting that number of dice into a \textbf{Dice Pool}. The dice used in Cogent are six-sided dice, commonly known as \textbf{D6}’s.
+In games of Cogent, player characters must overcome challenges during gameplay. When asked, they will create \textbf{Dice Pools} by combining the total number of points between their skill and attribute, adding three, and collecting that number of dice into a \textbf{Dice Pool}. The dice used in Cogent are six-sided dice, commonly known as \textbf{D6}'s.
 
-While explained in far more depth later, in general, you roll these dice, looking to roll the numbers \textbf{4}, \textbf{5} and \textbf{6}. Which count as “\textbf{Wins}”.
+While explained in far more depth later, in general, you roll these dice, looking to roll the numbers \textbf{4}, \textbf{5} and \textbf{6}. Rolling one of these counts as a “\textbf{win}”.
 
-The Narrator – That is, the person facilitating your game will set a \textbf{Challenge Level} (denoted \textbf{CL}) , which will be a number between \textbf{1} and \textbf{8,} that you need to equal or beat with your dice roll.
+The Narrator - that is, the person facilitating your game - will set a \textbf{Challenge Level} (denoted \textbf{CL}), which will be a number between \textbf{1} and \textbf{8}, that you need to equal or beat with your dice roll.
 
-And that’s it – it simply boils down to collecting a number of \textbf{D6}’s based on your character's statistics, rolling them, and looking to score enough \textbf{wins} to beat the \textbf{Challenge Level}! If you manage to do that, you pass the check, and your character succeeds in the task they set out to do.
+And that's it - it simply boils down to collecting a number of \textbf{D6}'s based on your character's statistics, rolling them, and looking to score enough \textbf{wins} to beat the \textbf{Challenge Level}! If you manage to do that, you pass the check, and your character succeeds in the task they set out to do.
