--- a/sections/introduction/roleplay.tex
+++ b/sections/introduction/roleplay.tex
@@ -1,15 +1,15 @@
-\section{What is Roleplaying} \label{sec:what_is_roleplaying}
+\section{What is Roleplaying?} \label{sec:what_is_roleplaying}
 
-As the term implies, roleplaying means to take on the role of someone else, specifically, a character you will play the role of in your game. \textbf{Roleplaying} is by far the most important aspect of the \textbf{Cogent Roleplay }system. Everything in this game is made to promote better, more immersive and satisfying Role-play. That being said, the ultimate thing that’ll enable you to experience this is your own imagination and creativity.
+As the term implies, roleplaying means to take on the role of someone else, specifically, a character you will play the role of in your game. \textbf{Roleplaying} is by far the most important aspect of the Cogent Roleplay system. Everything in this game is made to promote better, more immersive and satisfying roleplay. That being said, the ultimate thing that'll enable you to experience this is your own imagination and creativity.
 
-Any character you take the role of could be yourself in a fictional setting; an alter-ego who just so happens to be a heroic knight, daring space captain or cunning super spy. On the other hand, the character you play could be someone completely different, which will often open up role-play experiences previously unimagined! In any case, being consistent and true to whatever character you’re playing will prove most rewarding.
+Any character you take the role of could be yourself in a fictional setting; an alter-ego who just so happens to be a heroic knight, daring space captain or cunning super spy. On the other hand, the character you play could be someone completely different, which will often open up roleplay experiences previously unimagined! In any case, being consistent and true to whatever character you're playing will prove most rewarding.
 
-The actions you attempt while role-playing is governed by simple rules and character statistics, where the roll of the dice determines the results. This dice rolling simulates the chaotic unpredictability and suspense of real life, there’s always a chance of failure – but failure isn’t a bad thing! Often it’s the failures that unlock the most suspense in your game, and result in some of the most hilarious stories.
+The actions you attempt while roleplaying is governed by simple rules and character statistics, where the roll of the dice determines the results. This dice rolling simulates the chaotic unpredictability and suspense of real life, where there's always a chance of failure - but failure isn't necessarily a bad thing! Often it's the failures that unlock the most suspense in your game, and result in some of the most hilarious stories.
 
-The core structure of any Tabletop Role-Playing game is made of two components:
+The core structure of any tabletop roleplaying game is made of two components:
 
 \begin{itemize}
-\item Players who take on the role of the \textbf{player characters} (sometimes referred to as \textbf{PC}s), and act out the character’s dreams, goals and aspirations.
+\item Players who take on the role of the \textbf{Player Characters} (sometimes referred to as \textbf{PC}s), and act out the character's dreams, goals and aspirations.
 
 \item A \textbf{Narrator} (traditionally referred to as a Game Master or Dungeon Master), who acts as a referee and drives the game and story forward by controlling the world that the players are interacting with.
 \end{itemize}
@@ -18,35 +18,35 @@ The core structure of any Tabletop Role-Playing game is made of two components:
 
 Players take on the role of their character, meaning that regardless of their own ambitions or desires as a player, they should act how that character would act. Ideally, players at the table are trying to create a fun immersive experience, and how you approach character interaction will drastically affect that.
 
-Example of Non-Immersive Roleplaying:
+Example of non-immersive roleplaying:
 
 \begin{displayquote}
-\textit{ \textbf{Marcus} (played by John)}
+\textit{\textbf{Marcus} (played by John)}
 
 "My character says to Tim's character that we should be careful of an ambush."
 \end{displayquote}
 
 
-The problem with interactions like this is that it’s impersonal. The players should attempt to step inside their own character and speak as that character. Therefore, if John’s character Marcus is a selfish and impatient rogue, the role-play might proceed something like this:
+The problem with interactions like this is that it's impersonal. The players should attempt to step inside their own character and speak as that character. Therefore, if John's character Marcus is a selfish and impatient rogue, the role-play might proceed something like this:
 
 \begin{displayquote}
-    \textit{ \textbf{Marcus} (played by John)}
+    \textit{\textbf{Marcus} (played by John)}
     
     I say to Garath, "Hey meatbag, tread carefully! Bandits roam these parts and I wouldn't be surprised if some may be lying in wait to ambush us…"
 \end{displayquote}
 
-John would then wait for Tim to respond in character. For example, if Tim’s character is a hot-tempered thick-headed warrior named Gareth, the role-play might proceed something like this:
+John would then wait for Tim to respond in character. For example, if Tim's character is a hot-tempered thick-headed warrior named Gareth, the roleplay might proceed something like this:
 
 \begin{displayquote}
-    \textit{ \textbf{Gareth} (played by Tim)}
+    \textit{\textbf{Gareth} (played by Tim)}
     
     "Foolish bandits, why would they be lying in wait if their intent is to ambush travelers? Surely it would take too much time to stand up!"
 \end{displayquote}
 
 Speaking freely as your character (warts and all) will enhance the immersion of the game and make it a lot more fun. Not only should the player try to speak as their character, but they should speak the same way their character would speak. You can even speak in an accent if you want!
 
-The player characters will come across many other characters controlled by the Narrator. These are called “non-player characters” and are often referred to as “NPCs.”
+The player characters will come across many other characters controlled by the Narrator. These are called \textbf{non-player characters} and are often referred to as "NPCs."
 
-The Narrator is the most important person in any tabletop Role-playing game as you can’t play without one. They describe everything in the game’s world and setting to aid the players in visualizing the adventures. They run the game through the rules of the system, informing the players when they are required to make dice rolls, which will then determine the success or failure of their actions.
+The Narrator is the most important person in any tabletop roleplaying game as you can't play without one. They describe everything in the game's world and setting to aid the players in visualizing the adventures. They run the game through the rules of the system, informing the players when they are required to make dice rolls, which will then determine the success or failure of their actions.
 
-Ultimately, a well-crafted Pen and Paper Role-playing game provides structure and immersion to something humans have done for literally thousands of years; communal storytelling.
+Ultimately, a well-crafted pen and paper roleplaying game provides structure and immersion to something humans have done for literally thousands of years; communal storytelling.
