--- a/sections/introduction/welcome.tex
+++ b/sections/introduction/welcome.tex
@@ -1,28 +1,28 @@
 \section{Cogent Roleplay} \label{sec:cogent_roleplay}
 
-Cogent is a Tabletop Pen and Paper Role-playing game that’s easy to learn, but has the depth and sophistication for the most demanding of role-players. The Cogent Roleplay System aims to provide you with the tools you need to experience adventures as any character you can imagine, such as a great hero, scoundrel, villain, thief, rogue or any other. Your stories will unfold in all kinds of worlds and settings, such as classic medieval fantasy, science fiction, space opera, zombie apocalypse, steampunk, superhero – or something of your own unique creation. Have fun, be fearless, and create your own stories worthy of the greatest myths and legends!
+Cogent is a tabletop pen and paper roleplaying game that's easy to learn, but has the depth and sophistication for the most demanding of roleplayers. The Cogent Roleplay System aims to provide you with the tools you need to experience adventures as any character you can imagine, such as a great hero, scoundrel, villain, thief, rogue or any other. Your stories will unfold in all kinds of worlds and settings, such as classic medieval fantasy, science fiction, space opera, zombie apocalypse, steampunk, superhero - or something of your own unique creation. Have fun, be fearless, and create your own stories worthy of the greatest myths and legends!
 
 \section{A Message From the Authors} \label{sec:message_from_authors}
 
-Let us introduce ourselves – we are Josiah Brooks (\href{https://www.youtube.com/channel/UCHu2KNu6TtJ0p4hpSW7Yv7Q}{Jazza}) and Shad Brooks (of \href{https://www.youtube.com/channel/UCkmMACUKpQeIxN9D9ARli1Q}{Shadiversity}), two nerdy brothers who have always enjoyed role-playing and all it has to offer. We created Cogent Roleplay to address the rampant problems in many PnP (Pen \& Paper) RPGs (Role-playing Games), such as:
+Let us introduce ourselves - we are Josiah Brooks (\href{https://www.youtube.com/channel/UCHu2KNu6TtJ0p4hpSW7Yv7Q}{Jazza}) and Shad Brooks (of \href{https://www.youtube.com/channel/UCkmMACUKpQeIxN9D9ARli1Q}{Shadiversity}), two nerdy brothers who have always enjoyed roleplaying and all it has to offer. We created Cogent Roleplay to address the rampant problems in many PnP (Pen \& Paper) RPGs (Roleplaying Games), such as:
 
 \begin{itemize}
     \item Poor game structures that are kept purely for traditions' sake, preventing innovation.
     \item Huge, overly complex rules, that make it extremely difficult for new players, and bog down gameplay with redundant processes.
-    \item Things that prevent player creativity. In Cogent, we want to empower players to attempt anything their characters could reasonably try, and not respond with, no, that’s not allowed in the rules.
-    \item Role-playing games that put their mechanics before the true purpose of a pen-and-paper RPG, the narrative you create with your friends.
+    \item Things that prevent player creativity. In Cogent, we want to empower players to attempt anything their characters could reasonably try, and not respond with, no, that's not allowed in the rules.
+    \item Roleplaying games that put their mechanics before the true purpose of a pen-and-paper RPG, the narrative you create with your friends.
 \end{itemize}
 
-For these reasons we feel you’ll have a more rewarding experience with Cogent as it resolves all these issues while providing new and innovative ways to experience tabletop role-playing.
+For these reasons we feel you'll have a more rewarding experience with Cogent as it resolves all these issues, while providing new and innovative ways to experience tabletop roleplaying.
 
-Cogent Roleplay is currently in its late Alpha phase, Beta soon, where the rules are being updated and improved regularly, as will the tools we create to accompany them – but even so, we believe Cogent has the potential to be the Tabletop RPG for the next generation – for these reasons:
+Cogent Roleplay is currently in its late Alpha phase, Beta soon, where the rules are being updated and improved regularly, as will the tools we create to accompany them - but even so, we believe Cogent has the potential to be the Tabletop RPG for the next generation - for these reasons:
 
 \begin{itemize}
-    \item Cogent Roleplay is simple for beginners and easy to learn – but has a depth that can be mastered and explored by experienced players.
-    \item In the new age of content, where video content, audiobooks and podcasts reign supreme~–~Cogent is uniquely structured to enable the best storytellers to tell interesting and diverse stories, naturally suited to every setting, genre and play style, and share them with the world.
-    \item We understand that to build an RPG system that will cater to the widest range of stories and personalities, we need to be extremely community-oriented as we develop the rules and tools for Cogent – and we will build Cogent from the ground up to serve the community that builds and contributes to it.
+    \item Cogent Roleplay is simple for beginners and easy to learn, but has a depth that can be mastered and explored by experienced players.
+    \item In the new age of content, where video content, audiobooks and podcasts reign supreme, Cogent is uniquely structured to enable the best storytellers to tell interesting and diverse stories, naturally suited to every setting, genre and play style, and share them with the world.
+    \item We understand that to build an RPG system that will cater to the widest range of stories and personalities, we need to be extremely community-oriented as we develop the rules and tools for Cogent. We will build Cogent from the ground up to serve the community that builds and contributes to it.
 \end{itemize}
 
-We hope that Cogent provides you with endless hours of fun. If you have any suggestions regarding the rules or how the Cogent Roleplay system could be improved, please send us your feedback through our discord group and social media pages. With your help, we’ll polish and refine these rules to make Cogent the best pen-and-paper RPG system in the world.
+We hope that Cogent provides you with endless hours of fun. If you have any suggestions regarding the rules or how the Cogent Roleplay system could be improved, please send us your feedback through our Discord group and social media pages. With your help, we'll polish and refine these rules to make Cogent the best pen-and-paper RPG system in the world.
 
 Thanks for checking out Cogent Roleplay, we hope you have a blast!
