Added challenge levels and conflicts and reflexive actions chapters.

--- a/main.tex
+++ b/main.tex
@@ -65,6 +65,14 @@
 \chapter{Actions and Challenge Levels} \label{ch:hp_challenge_levels}
 \input{sections/how_to_play/challenge_levels.tex}
 
+\newpage
+\chapter{Conflicts and Reflexive Actions} \label{ch:hp_conflicts_reflexive_actions}
+\input{sections/how_to_play/conflicts_reflexive_actions.tex}
+
+\newpage
+\chapter{Success and Failure} \label{ch:hp_success_and_failure}
+\input{sections/how_to_play/success_and_failure.tex}
+
 % =======================================================================================
 %                                   APPENDICES
 % =======================================================================================
