--- a/sections/how_to_play/challenge_levels.tex
+++ b/sections/how_to_play/challenge_levels.tex
@@ -137,7 +137,7 @@ They score four successes, and the narrator describes their success, the lock is
 
 \section{Skill Speciality} \label{sec:skill_speciality}
 
-Once someone has specialized in a given task enough, they can perform its simpler and more routine functions with ease. Once your dice pool for a given skill check is equal to or greater than **EIGHT** you are considered a specialist in that skill. If you are a specialist for a skill when asked to make a check for that skill with a Challenge Level of **THREE** or less, you automatically pass if all of the following conditions are true:
+Once someone has specialized in a given task enough, they can perform its simpler and more routine functions with ease. Once your dice pool for a given skill check is equal to or greater than \textbf{EIGHT} you are considered a specialist in that skill. If you are a specialist for a skill when asked to make a check for that skill with a Challenge Level of \textbf{THREE} or less, you automatically pass if all the following conditions are true:
 
 \begin{itemize}
     \item You are not under duress (No time pressure, no outside influence or aggression such as combat.)
