Added assists, player-narrator negotations and success and failure chapters. Corrected some missing bold text in challenge levels.

--- a/main.tex
+++ b/main.tex
@@ -73,6 +73,14 @@
 \chapter{Success and Failure} \label{ch:hp_success_and_failure}
 \input{sections/how_to_play/success_and_failure.tex}
 
+\newpage
+\chapter{Assists} \label{ch:hp_assists}
+\input{sections/how_to_play/assists.tex}
+
+\newpage
+\chapter{Player-Narrator Negotiations} \label{ch:hp_player_narrator_negotiations}
+\input{sections/how_to_play/player_narrator_negotiations.tex}
+
 % =======================================================================================
 %                                   APPENDICES
 % =======================================================================================
