--- a/sections/how_to_play/challenge_levels.tex
+++ b/sections/how_to_play/challenge_levels.tex
@@ -6,7 +6,7 @@ When a player wishes to undertake a task within the game against something that 
     \item Recalling information.
 \end{itemize}
 
-This action is completed by rolling your character-relevant **Dice Pool** against a static \textbf{‘Challenge Level’}, or \textbf{‘CL’}.
+This action is completed by rolling your character-relevant \textbf{Dice Pool} against a static \textbf{‘Challenge Level’}, or \textbf{‘CL’}.
 
 When a player character chooses to make an action within the game, the Narrator can assign them a CL based on the difficulty of what they will attempt to perform, as well as indicating which skill should be used for the task – the more difficult the task, the higher the \textbf{CL}, ranging from \textbf{1} (a common task) to \textbf{8} (inconceivable!).
 
@@ -49,7 +49,7 @@ To pass the \textbf{Challenge Level} you must roll enough \textbf{wins} equivale
     \end{minipage}
 \end{figure}
 
-The more dice a player has to roll against a **CL**, the higher the chance they will succeed.
+The more dice a player has to roll against a \textbf{CL}, the higher the chance they will succeed.
 
 SEE CHEAT SHEET REFERENCE: CHSH - Challenge Level (CL) Difficulty Scale
 
